# cppexp

./: .gitignore  CMakeLists.txt
include/: cppexp.hpp  funcnode.hpp  funcstore.hpp  node.hpp  types.hpp
src/: cppexp.cpp
tests/: CMakeLists.txt
tests/overview/: usage_1.cpp
tests/unit_tests/: CMakeLists.txt
